objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <formula>Name</formula>
        <label>Account Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type_Formula__c</fullName>
        <description>This field is used in a validation rule since you cannot use PRIORVALUE function on the record type id field itself in a validation rule. It is a hidden field only used in the rule called &quot;Converting_account_record_type&quot;</description>
        <formula>IF(RecordType.Id = &quot;012300000000Yip&quot;,&quot;Customer&quot;,&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type_ID__c</fullName>
        <formula>RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Process</fullName>
                    <default>true</default>
                    <label>Sales Process</label>
                </value>
                <value>
                    <fullName>Permit and Design</fullName>
                </value>
                <value>
                    <fullName>Construction - Pending</fullName>
                </value>
                <value>
                    <fullName>Construction - Only Roof Mounts Complete</fullName>
                </value>
                <value>
                    <fullName>Construction - Sub Commencement/Modules delivered</fullName>
                </value>
                <value>
                    <fullName>Inspections - City/County Complete</fullName>
                </value>
                <value>
                    <fullName>Inspections Complete</fullName>
                </value>
                <value>
                    <fullName>Closeout Complete</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Utility_Zone__c</fullName>
        <label>Account Utility Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>WCMA</fullName>
                </value>
                <value>
                    <fullName>NEMA</fullName>
                </value>
                <value>
                    <fullName>SEMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Utility__c</fullName>
        <label>Account Utility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ameren</fullName>
                </value>
                <value>
                    <fullName>AP+T</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>Central Hudson</fullName>
                </value>
                <value>
                    <fullName>ComEdison</fullName>
                </value>
                <value>
                    <fullName>ConEd</fullName>
                </value>
                <value>
                    <fullName>CPAU</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>Delmarva</fullName>
                </value>
                <value>
                    <fullName>Dominion</fullName>
                </value>
                <value>
                    <fullName>Duke Energy</fullName>
                </value>
                <value>
                    <fullName>Eversource CT (CL&amp;P)</fullName>
                </value>
                <value>
                    <fullName>Eversource East (NSTAR)</fullName>
                </value>
                <value>
                    <fullName>Eversource NH (PSNH)</fullName>
                </value>
                <value>
                    <fullName>Eversource West (WMECO)</fullName>
                </value>
                <value>
                    <fullName>GWP</fullName>
                </value>
                <value>
                    <fullName>IID</fullName>
                </value>
                <value>
                    <fullName>JCP&amp;L</fullName>
                </value>
                <value>
                    <fullName>LADWP</fullName>
                </value>
                <value>
                    <fullName>LIPA</fullName>
                </value>
                <value>
                    <fullName>MetED</fullName>
                </value>
                <value>
                    <fullName>MidAmerican</fullName>
                </value>
                <value>
                    <fullName>Modesto Irrigation District</fullName>
                </value>
                <value>
                    <fullName>Municipal</fullName>
                </value>
                <value>
                    <fullName>National Grid</fullName>
                </value>
                <value>
                    <fullName>NSTAR</fullName>
                </value>
                <value>
                    <fullName>NY State Electric &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Oncor</fullName>
                </value>
                <value>
                    <fullName>Orange and Rockland</fullName>
                </value>
                <value>
                    <fullName>Other - East Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <description>used as Power of One formula in reporting, to count unique records</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Default_Packing_Slip_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Packing Slip Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Packing Slip</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts (Default Packing Slip Format)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Default_Purchase_Order_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Purchase Order Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Purchase Order</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts (Default Purchase Order Format)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Account_Payable_Terms__c</fullName>
        <inlineHelpText>Filled out by Accounting- Grace period customers give until payment is due. If you are Net 30, put 30 in this field. If you are a Due Upon Receipt customer, put zero to make the issue and due date be the same.</inlineHelpText>
        <label>Payable Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates account is eligible for use in accounting application.</inlineHelpText>
        <label>Accounting Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Type__c</fullName>
        <inlineHelpText>Used in filtered lookups for Accounts Payable and Billing screens to limit selection of Accounts to those marked as Customers or Vendors for use by Accounting.</inlineHelpText>
        <label>Accounting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Customer and Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Activity_Statement_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to configure formatting and display of fields in Activity Statement PDF. Overrides the default Activity Statement defined in Accounting Settings.</inlineHelpText>
        <label>Activity Statement Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Activity Statement</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts (Activity Statement Format)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Alternate_Payee_Name__c</fullName>
        <inlineHelpText>Alternate payee name which can be used to populate the payee field on a cash disbursement.</inlineHelpText>
        <label>Alternate Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used as billing contact in Accounting Seed Billings.</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Days_Due__c</fullName>
        <label>Billing Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Discount_Days_Due__c</fullName>
        <inlineHelpText>Used to calculate payment due date for a prompt payment discount on a billing.</inlineHelpText>
        <label>Billing Discount Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Discount_Percent__c</fullName>
        <inlineHelpText>Used to determine the discount off the total price of a billing if payment is received within billing discount days due.</inlineHelpText>
        <label>Billing Discount %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Email__c</fullName>
        <inlineHelpText>Appears in Accounting Seed Billing PDF if populated.</inlineHelpText>
        <label>zDep-Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to configure formatting and display of fields in Billing PDF. Overrides the default Billing Format defined in Accounting Settings.</inlineHelpText>
        <label>Billing Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Billing</value>
            </filterItems>
            <infoMessage>The Type must equal &quot;Billing&quot;</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts (Billing Format)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Terms_Name__c</fullName>
        <label>Billing Terms Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit_Card_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field denotes a credit card vendor. If checked this account will display in the credit card field filtered lookup on the expense object.</inlineHelpText>
        <label>Credit Card Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_1099_Box__c</fullName>
        <inlineHelpText>Marks default 1099 box for reporting cash disbursements to a 1099 vendor.</inlineHelpText>
        <label>Default 1099 Box</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Rents</fullName>
                </value>
                <value>
                    <fullName>2. Royalties</fullName>
                </value>
                <value>
                    <fullName>3. Other Income</fullName>
                </value>
                <value>
                    <fullName>4. Federal Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5. Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6. Medical Payments</fullName>
                </value>
                <value>
                    <fullName>7. Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8. Substitute Payments</fullName>
                </value>
                <value>
                    <fullName>10. Crop Insurance</fullName>
                </value>
                <value>
                    <fullName>13. Golden Parachute</fullName>
                </value>
                <value>
                    <fullName>14. Attorney Proceeds</fullName>
                </value>
                <value>
                    <fullName>15a. Section 409A Deferrals</fullName>
                </value>
                <value>
                    <fullName>15b. Section 409A Income</fullName>
                </value>
                <value>
                    <fullName>16. State Tax Withheld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this field is populated and this account is selected as the vendor on an account payable, the account payable line Expense GL Account field will be populated with this value dynamically.</inlineHelpText>
        <label>Default Expense GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>notEqual</operation>
                <value>Cash Flow</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Days_Due__c</fullName>
        <label>Payable Discount Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Percent__c</fullName>
        <label>Payable Discount %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Entity_Use_Code__c</fullName>
        <description>To exempt an Account from Avalara tax calculation, this field&apos;s value should match the Entity Use code entered for this Account&apos;s exemption in Avalara. Use in conjunction with the Exemption Number field.</description>
        <inlineHelpText>To exempt an Account from Avalara tax calculation, this field&apos;s value should match the Entity Use code entered for this Account&apos;s exemption in Avalara. Use in conjunction with the Exemption Number field.</inlineHelpText>
        <label>Entity Use Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Exemption_Number__c</fullName>
        <description>To exempt an Account from Avalara tax calculation, this field&apos;s value should match the Exemption Number entered for this Account&apos;s exemption in Avalara. Use in conjunction with the Entity Use Code field.</description>
        <inlineHelpText>To exempt an Account from Avalara tax calculation, this field&apos;s value should match the Exemption Number entered for this Account&apos;s exemption in Avalara. Use in conjunction with the Entity Use Code field.</inlineHelpText>
        <label>Exemption Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__File_Import_Match_Name__c</fullName>
        <inlineHelpText>Used to match the vendor account to a specific file import related transaction. This field is only used when importing financial files such as a bank statement via the Import Financial File tab.</inlineHelpText>
        <label>File Import Match Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts (GL Variable 1)</relationshipLabel>
        <relationshipName>AccountsGLAV1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts (GL Variable 2)</relationshipLabel>
        <relationshipName>AccountsGLAV2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts (GL Variable 3)</relationshipLabel>
        <relationshipName>AccountsGLAV3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Last_Statement_Sent__c</fullName>
        <inlineHelpText>Indicates when a statement was emailed either from the Account detail&apos;s Create Statement button or Account List View&apos;s Create Outstanding Statements button.</inlineHelpText>
        <label>Last Statement Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Outstanding_Statement_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to configure formatting and display of fields in Outstanding Statement PDF. Overrides the default Outstanding Statement defined in Accounting Settings.</inlineHelpText>
        <label>Outstanding Statement Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Outstanding Statement</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Shipping Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Statement_Needed__c</fullName>
        <inlineHelpText>A value of &apos;Yes&apos; indicates that Billings have a balance due. This is set to &apos;No&apos; when statements have been emailed or when there are no Billings with a balance due.</inlineHelpText>
        <label>Statement Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Stripe_Customer_Id__c</fullName>
        <label>Stripe Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Taxpayer_Identification_Number__c</fullName>
        <label>Taxpayer Identification Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__VAT_Business_Identification_Number__c</fullName>
        <description>Informational field used for VAT customers when Avalara Tax calculation is enabled. The value entered here populates the Customer VAT Number field on the Avalara transaction.</description>
        <inlineHelpText>Informational field used for VAT customers when Avalara Tax calculation is enabled. The value entered here populates the Customer VAT Number field on the Avalara transaction.</inlineHelpText>
        <label>VAT Business Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__X1099_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marks vendor to report cash disbursements on 1099-Misc form.</inlineHelpText>
        <label>1099 Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Company_Sites__c</fullName>
        <inlineHelpText>Additional states where the customer may have project sites</inlineHelpText>
        <label>Additional Company Sites</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Physical_Addresses__c</fullName>
        <inlineHelpText>List additional physical addresses in addition to the billing address if they exist.</inlineHelpText>
        <label>Additional Physical Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alt_Branches__c</fullName>
        <inlineHelpText>If a contractor may be utilized by multiple Branches, select the additional ones here.</inlineHelpText>
        <label>Alt. Branches</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>Nor Cal</fullName>
                </value>
                <value>
                    <fullName>So Cal</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Central Valley Cal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Effective_Date__c</fullName>
        <inlineHelpText>Date the Auto Insurance became effective for this Vendor</inlineHelpText>
        <label>Auto Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Expiration_Date__c</fullName>
        <inlineHelpText>Date Auto Insurance expires for this Vendor
Assistant PM&apos;s are notified of this expiration and will reach out to the Vendor for updated Certs
**Accounting will not pay a Vendor with expired insurance**</inlineHelpText>
        <label>Auto Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Insurance_Obtained__c</fullName>
        <inlineHelpText>Have we received the Auto Insurance for this Vendor?</inlineHelpText>
        <label>Auto Insurance Obtained?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Insurance_Required__c</fullName>
        <inlineHelpText>Is Auto Insurance required for this vendor?</inlineHelpText>
        <label>Auto Insurance Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Ac_Billing_Address_Latitude__c</fullName>
        <description>Billing Address Latitude field on Accounts page</description>
        <inlineHelpText>Latitude details for Avalara Tax Calculation.</inlineHelpText>
        <label>Billing Address Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Ac_Billing_Address_Longitude__c</fullName>
        <description>Billing Address Longitude field on Accounts page</description>
        <inlineHelpText>Longitude details for Avalara Tax Calculation.</inlineHelpText>
        <label>Billing Address Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Ac_Shipping_Address_Latitude__c</fullName>
        <description>Shipping Address Latitude field on Accounts page</description>
        <inlineHelpText>Latitude details for Avalara Tax Calculation.</inlineHelpText>
        <label>Shipping Address Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>